--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -92,7 +92,7 @@ more complex. Something to look at:
 
    chain INPUT {
        policy ACCEPT;
-       daddr 10.0.0.0/8 proto tcp dport ! ftp goto mychain sport :1023 TOS 4 settos 8 mark 2;
+       daddr 10.0.0.0/8 proto tcp dport ! ftp jump mychain sport :1023 TOS 4 settos 8 mark 2;
        daddr 10.0.0.0/8 proto tcp dport ftp REJECT;
    }
 
@@ -116,10 +116,10 @@ You will be thankful for it later!
         interface (eth0 ppp0) {
             # deny access to notorius hackers, return here if no match
             # was found to resume normal firewalling
-            goto badguys;
+            jump badguys;
 
-            protocol tcp goto fw_tcp;
-            protocol udp goto fw_udp;
+            protocol tcp jump fw_tcp;
+            protocol udp jump fw_udp;
         }
     }
 
@@ -328,7 +328,7 @@ Most matches are followed by a parameter: "proto tcp", "daddr
 =item
 
 B<target> keywords state what to do with a packet. Example: "ACCEPT",
-"REJECT", "goto".
+"REJECT", "jump".
 
 Some targets define more keywords to specify details: "REJECT
 reject-with icmp-net-unreachable".
@@ -405,9 +405,9 @@ specified by the policy.
 To avoid ambiguity, always specify the policies of all predefined
 chains explicitly.
 
-=item B<subchain ["CHAIN-NAME"] { ... }>
+=item B<@subchain ["CHAIN-NAME"] { ... }>
 
-Works like the normal block operators (i.e. without the I<subchain>
+Works like the normal block operators (i.e. without the I<@subchain>
 keyword), except that B<ferm> moves rules within the curly braces into
 a new custom chain. The name for this chain is chosen automatically by
 ferm.
@@ -424,12 +424,12 @@ the following example:
  }
 
 This generates 20 rules. When a packet arrives which does not pass the
-B<saddr> match, it nonetheless checks all 20 rules. With B<subchain>,
+B<saddr> match, it nonetheless checks all 20 rules. With B<@subchain>,
 this check is done once, resulting in faster network filtering and
 less CPU load:
 
  table filter chain INPUT {
-     saddr (1.2.3.4 2.3.4.5 3.4.5.6 4.5.6.7 5.6.7.8) subchain {
+     saddr (1.2.3.4 2.3.4.5 3.4.5.6 4.5.6.7 5.6.7.8) @subchain {
          proto tcp dport (http https ssh) ACCEPT;
          proto udp dport domain ACCEPT;
      }
@@ -437,13 +437,13 @@ less CPU load:
 
 Optionally, you may define the name of the sub chain:
 
- saddr (1.2.3.4 2.3.4.5 3.4.5.6) subchain "foobar" {
+ saddr (1.2.3.4 2.3.4.5 3.4.5.6) @subchain "foobar" {
      proto tcp dport (http https ssh) ACCEPT;
      proto udp dport domain ACCEPT;
  }
 
 You can achieve the same by explicitly declaring a custom chain, but
-you may feel that using B<subchain> requires less typing.
+you may feel that using B<@subchain> requires less typing.
 
 
 =back
@@ -530,10 +530,19 @@ keywords. We'll get to that later.
 
 =over 8
 
-=item B<goto [custom-chain-name]>
+=item B<jump [custom-chain-name]>
 
 Jumps to a custom chain. If no rule in the custom chain matched,
 netfilter returns to the next rule in the previous chain.
+
+=item B<realgoto [custom-chain-name]>
+
+Go to a custom chain.  Unlike the B<jump> option, B<RETURN> will not
+continue processing in this chain but instead in the chain that called
+us via B<jump>.
+
+The keyword B<realgoto> was chosen during the transition period,
+because B<goto> (already deprecated) used to be an alias for B<jump>.
 
 =item B<ACCEPT>
 
@@ -556,7 +565,7 @@ Type "iptables -j REJECT -h" for details.
 
 =item B<RETURN>
 
-Finish the current chain and return to the calling chain (if "goto
+Finish the current chain and return to the calling chain (if "jump
 [custom-chain-name]" was used).
 
 =item B<NOP>
@@ -623,6 +632,27 @@ Matches if a value in /proc/net/ipt_condition/NAME is 1 (path is
 
     mod condition condition (abc def) ACCEPT;
     mod condition condition !foo ACCEPT;
+
+=item B<connbytes>
+
+Match by how many bytes or packets a connection (or one of the two
+flows constituting the connection) have tranferred so far, or by
+average bytes per packet.
+
+    mod connbytes connbytes 65536: connbytes-dir both connbytes-mode bytes ACCEPT;
+    mod connbytes connbytes !1024:2048 connbytes-dir reply connbytes-mode packets ACCEPT;
+
+Valid values for I<connbytes-dir>: I<original>, I<reply>, I<both>; for
+I<connbytes-mode>: I<packets>, I<bytes>, I<avgpkt>.
+
+=item B<connlimit>
+
+Allows you to restrict the number of parallel TCP connections to a
+server per client IP address (or address block).
+
+    mod connlimit connlimit-above 4 REJECT;
+    mod connlimit connlimit-above !4 ACCEPT;
+    mod connlimit connlimit-above 4 connlimit-mask 24 REJECT;
 
 =item B<connmark>
 
@@ -750,6 +780,9 @@ when you use "protocol icmp".
 
     proto icmp icmp-type echo-request ACCEPT;
 
+This option can also be used in be I<ip6> domain, although this is
+called B<icmpv6> in F<ip6tables>.
+
 Use "iptables -p icmp C<-h>" to obtain a list of valid ICMP types.
 
 =item B<iprange>
@@ -808,6 +841,12 @@ Matches packets based on their netfilter mark field. This may be a 32
 bit integer between 0 and 4294967295.
 
     mod mark mark 42;
+
+=item B<mh>
+
+Matches the mobility header (domain I<ip6>).
+
+    proto mh mh-type binding-update ACCEPT;
 
 =item B<multiport>
 
@@ -951,6 +990,14 @@ Checks the connection tracking state.
 
 Type "iptables -m state -h" for details.
 
+=item B<statistic>
+
+Successor of B<nth> and B<random>, currently undocumented in the
+iptables(8) man page.
+
+    mod statistic mode random probability 0.8 ACCEPT;
+    mod statistic mode nth every 5 packet 0 DROP;
+
 =item B<tcp>
 
 Checks TCP specific attributes. This module is automatically loaded
@@ -1004,6 +1051,14 @@ Matches the ttl (time to live) field in the IP header.
     mod ttl ttl-gt 10; # ttl greater than
     mod ttl ttl-lt 16; # ttl less than
 
+=item B<u32>
+
+Compares raw data from the packet.  You can specify more than one
+filter in a ferm list; these are not expanded into multiple rules.
+
+    mod u32 u32 '6&0xFF=1' ACCEPT;
+    mod u32 u32 ('27&0x8f=7' '31=0x527c4833') DROP;
+
 =item B<unclean>
 
 Matches packets which seem malformed or unusual. This match has no
@@ -1028,6 +1083,16 @@ Sets the netfilter mark value associated with a connection.
     CONNMARK restore-mark;
     CONNMARK save-mark mask 0x7fff;
     CONNMARK restore-mark mask 0x8000;
+
+=item B<CONNSECMARK>
+
+This module copies security markings from packets to connections (if
+unlabeled), and from connections back to packets (also only if
+unlabeled).  Typically used in conjunction with SECMARK, it is only
+valid in the mangle table.
+
+    CONNSECMARK save;
+    CONNSECMARK restore;
 
 =item B<DNAT to [ip-address|ip-range|ip-port-range]>
 
@@ -1099,6 +1164,14 @@ Disable connection tracking for all packets matching that rule.
 
     proto tcp dport (135:139 445) NOTRACK;
 
+=item B<NFLOG>
+
+Log packets over netlink; this is the successor of I<ULOG>.
+
+    NFLOG nflog-group 5 nflog-prefix "Look at this: ";
+    NFLOG nflog-range 256;
+    NFLOG nflog-threshold 10;
+
 =item B<NFQUEUE>
 
 Userspace queueing, requires nfnetlink_queue kernel support.
@@ -1118,6 +1191,14 @@ Transparent proxying: alter the destination IP of the packet to the
 machine itself.
 
     proto tcp dport http REDIRECT to-ports 3128;
+
+=item B<SECMARK>
+
+This is used to set the security mark value associated with the packet
+for use by security subsystems such as SELinux.  It is only valid in
+the mangle table.
+
+    SECMARK selctx "system_u:object_r:httpd_packet_t:s0";
 
 =item B<SET [add-set|del-set] [setname] [flag(s)]>
 
@@ -1177,9 +1258,9 @@ give a network interface a meaningful name.
 
 To set variables, write:
 
-    def $DEV_INTERNET = eth0;
-    def $PORTS = (http ftp);
-    def $MORE_PORTS = ($PORTS 8080);
+    @def $DEV_INTERNET = eth0;
+    @def $PORTS = (http ftp);
+    @def $MORE_PORTS = ($PORTS 8080);
 
 In the real ferm code, variables are used like any other keyword
 parameter:
@@ -1192,10 +1273,10 @@ Note that variables can only be used in keyword parameters
 
 Variables are only valid in the current block:
 
-    def $DEV_INTERNET = eth1;
+    @def $DEV_INTERNET = eth1;
     chain INPUT {
         proto tcp {
-            def $DEV_INTERNET = ppp0;
+            @def $DEV_INTERNET = ppp0;
             interface $DEV_INTERNET dport http ACCEPT;
         }
         interface $DEV_INTERNET DROP;
@@ -1243,10 +1324,10 @@ The current netfilter chain.
 Functions are similar to variables, except that they may have
 parameters, and they provide ferm commands, not values.
 
-    def &FOO() = proto (tcp udp) dport domain;
+    @def &FOO() = proto (tcp udp) dport domain;
     &FOO() ACCEPT;
 
-    def &TCP_TUNNEL($port, $dest) = {
+    @def &TCP_TUNNEL($port, $dest) = {
         table filter chain FORWARD interface ppp0 proto tcp dport $port daddr $dest outerface eth0 ACCEPT;
         table nat chain PREROUTING interface ppp0 proto tcp dport $port daddr 1.2.3.4 DNAT to $dest;
     }
@@ -1260,14 +1341,14 @@ command in a ferm rule, i.e. it must be followed by ';'. The '&FOO()'
 example does not contain a block, thus you may write 'ACCEPT' after
 the call. To circumvent this, you can reorder the keywords:
 
-    def &IPSEC() = { proto (esp ah); proto udp dport 500; }
-    ACCEPT &IPSEC();
+    @def &IPSEC() = { proto (esp ah); proto udp dport 500; }
+    chain INPUT ACCEPT &IPSEC();
 
 =head2 Backticks
 
 With backticks, you may use the output of an external command:
 
-    def $DNSSERVERS = `grep nameserver /etc/resolv.conf | awk '{print $2}'`
+    @def $DNSSERVERS = `grep nameserver /etc/resolv.conf | awk '{print $2}'`;
     chain INPUT proto tcp saddr $DNSSERVERS ACCEPT;
 
 The command is executed with the shell (F</bin/sh>), just like
@@ -1279,9 +1360,9 @@ of values, separated by whitespace.
 
 =head2 Includes
 
-The B<include> keyword allows you to include external files:
+The B<@include> keyword allows you to include external files:
 
-    include 'vars.ferm';
+    @include 'vars.ferm';
 
 The file name is relative to the calling file, e.g. when including
 from F</etc/ferm/ferm.conf>, the above statement includes
@@ -1291,13 +1372,47 @@ included file are still available in the calling file.
 B<include> works within a block:
 
     chain INPUT {
-        include 'input.ferm';
+        @include 'input.ferm';
     }
 
 If you specify a directory (with a trailing '/'), all files in this
 directory are included, sorted alphabetically:
 
-    include 'ferm.d/';
+    @include 'ferm.d/';
+
+=head2 Conditionals
+
+The keyword B<@if> introduces a conditional expression:
+
+    @if $condition DROP;
+
+A value is evaluated true just like in Perl: zero, empty list, empty
+string are false, everything else is true.  Examples for true values:
+
+    (a b); 1; 'foo'; (0 0)
+
+Examples for false values:
+    (); 0; '0'; ''
+
+There is also B<@else>:
+
+    @if $condition DROP; @else REJECT;
+
+Note the semicolon before the B<@else>.
+
+It is possible to use curly braces after either B<@if> or B<@else>:
+
+    @if $condition {
+        MARK set-mark 2;
+        RETURN;
+    } @else {
+        MARK set-mark 3;
+    }
+
+Since the closing curly brace also finishes the command, there is no
+need for semicolon.
+
+There is no B<@elsif>, use B<@else @if> instead.
 
 =head2 Hooks
 
@@ -1310,6 +1425,29 @@ The specified command is executed using the shell.  "pre" means run
 the command before applying the firewall rules, and "post" means run
 the command afterwards.  You may install any number of hooks.
 
+=head1 FUNCTIONS
+
+There are several built-in functions which you might find useful.
+
+=head2 @resolve((hostname1 hostname2 ...))
+
+Usually, host names are resolved by iptables.  To let ferm resolve
+host names, use the function @resolve:
+
+    saddr @resolve(my.host.foo) proto tcp dport ssh ACCEPT;
+    saddr @resolve((another.host.foo third.host.foo)) proto tcp dport openvpn ACCEPT;
+
+Note the double parentheses in the second line: the inner pair for
+creating a ferm list, and the outer pair as function parameter
+delimiters.
+
+This function currently only resolves B<A> records (i.e. IPv4
+addresses), rendering it useless for the I<ip6> domain.
+
+Be careful with resolved host names in firewall configuration.  DNS
+requests may block the firewall configuration for a long time, leaving
+the machine vulnerable, or they may fail.
+
 =head1 RECIPES
 
 The F<./examples/> directory contains numerous ferm configuration
@@ -1320,7 +1458,7 @@ samples, recipes and tricks.
 
 Ferm function make routine tasks quick and easy:
 
-    def &FORWARD_TCP($proto, $port, $dest) = {
+    @def &FORWARD_TCP($proto, $port, $dest) = {
         table filter chain FORWARD interface $DEV_WORLD outerface $DEV_DMZ daddr $dest proto $proto dport $port ACCEPT;
         table nat chain PREROUTING interface $DEV_WORLD daddr $HOST_STATIC proto $proto dport $port DNAT to $dest;
     }
@@ -1393,7 +1531,7 @@ The concept of variables has been overhauled in ferm 1.2; you can now
 declare functions which take parameters.  Besides that, you should use
 the new syntax:
 
- def $FOO = (http ssh);
+ @def $FOO = (http ssh);
  chain INPUT proto tcp dport $FOO ACCEPT;
 
 =item I<Arrays>
