--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,20 @@
     Max Kellermann <max@foo-projects.org>
 
 
+v1.3.2 - 19 Dec 2007
+  - bugfix: emit "--proto" instead of "--protocol" for xt_policy "proto"
+  - bugfix: handle array after DNAT/to-destination correctly
+  - target options cannot have arrays by default
+  - support netfilter modules:
+    * ipv4options
+    * string
+  - support netfilter targets:
+    * CLASSIFY (documentation)
+    * CLUSTERIP
+    * IPV4OPTSSTRIP
+    * SAME (--random, documentation)
+
+
 v1.3.1 - 9 Dec 2007
   - require IO::Handle, this fixes the interactive mode
   - configure test mode properly when running on microperl
