--- a/doc/ferm.1
+++ b/doc/ferm.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FERM 1"
-.TH FERM 1 "2007-11-30" "ferm 1.3.1" "FIREWALL RULES MADE EASY"
+.TH FERM 1 "2007-12-19" "ferm 1.3.2" "FIREWALL RULES MADE EASY"
 .SH "NAME"
 \&\fBferm\fR \- a firewall rule parser for linux
 .SH "SYNOPSIS"
@@ -916,6 +916,20 @@ Match a range of IPv4 addresses.
 \&    mod iprange src\-range 192.168.2.0\-192.168.3.255;
 \&    mod iprange dst\-range ! 192.168.6.0\-192.168.6.255;
 .Ve
+.IP "\fBipv4options\fR" 8
+.IX Item "ipv4options"
+Match on IPv4 header options like source routing, record route,
+timestamp and router\-alert.
+.Sp
+.Vb 7
+\&    mod ipv4options ssrr ACCEPT;
+\&    mod ipv4options lsrr ACCEPT;
+\&    mod ipv4options no\-srr ACCEPT;
+\&    mod ipv4options !rr ACCEPT;
+\&    mod ipv4options !ts ACCEPT;
+\&    mod ipv4options !ra ACCEPT;
+\&    mod ipv4options !any\-opt ACCEPT;
+.Ve
 .IP "\fBipv6header\fR" 8
 .IX Item "ipv6header"
 Matches the IPv6 extension header (ip6).
@@ -1145,6 +1159,14 @@ Successor of \fBnth\fR and \fBrandom\fR, currently undocumented in the
 \&    mod statistic mode random probability 0.8 ACCEPT;
 \&    mod statistic mode nth every 5 packet 0 DROP;
 .Ve
+.IP "\fBstring\fR" 8
+.IX Item "string"
+Matches a string.
+.Sp
+.Vb 2
+\&    mod string string "foo bar" ACCEPT;
+\&    mod string algo kmp from 64 to 128 hex\-string "deadbeef" ACCEPT;
+.Ve
 .IP "\fBtcp\fR" 8
 .IX Item "tcp"
 Checks \s-1TCP\s0 specific attributes. This module is automatically loaded
@@ -1220,6 +1242,22 @@ further parameters.
 .IX Subsection "Netfilter target modules"
 The following additional targets are available in ferm, provided that
 you enabled them in your kernel:
+.IP "\fB\s-1CLASSIFY\s0\fR" 8
+.IX Item "CLASSIFY"
+Set the \s-1CBQ\s0 class.
+.Sp
+.Vb 1
+\&    CLASSIFY set\-class 3:50;
+.Ve
+.IP "\fB\s-1CLUSTERIP\s0\fR" 8
+.IX Item "CLUSTERIP"
+Configure a simple cluster of nodes that share a certain \s-1IP\s0 and \s-1MAC\s0
+address.  Connections are statically distributed between the nodes.
+.Sp
+.Vb 2
+\&    CLUSTERIP new hashmode sourceip clustermac 00:12:34:45:67:89
+\&      total\-nodes 4 local\-node 2 hash\-init 12345;
+.Ve
 .IP "\fB\s-1CONNMARK\s0\fR" 8
 .IX Item "CONNMARK"
 Sets the netfilter mark value associated with a connection.
@@ -1268,6 +1306,14 @@ Modify the IPv6 Hop Limit field (ip6/mangle only).
 \&    HL hl\-set 5;
 \&    HL hl\-dec 2;
 \&    HL hl\-inc 1;
+.Ve
+.IP "\fB\s-1IPV4OPTSSTRIP\s0\fR" 8
+.IX Item "IPV4OPTSSTRIP"
+Strip all the \s-1IP\s0 options from a packet.  This module does not take any
+options.
+.Sp
+.Vb 1
+\&    IPV4OPTSSTRIP;
 .Ve
 .IP "\fB\s-1LOG\s0\fR" 8
 .IX Item "LOG"
@@ -1352,6 +1398,16 @@ machine itself.
 .Sp
 .Vb 1
 \&    proto tcp dport http REDIRECT to\-ports 3128;
+.Ve
+.IP "\fB\s-1SAME\s0\fR" 8
+.IX Item "SAME"
+Similar to \s-1SNAT\s0, but a client is mapped to the same source \s-1IP\s0 for all
+its connections.
+.Sp
+.Vb 3
+\&    SAME to 1.2.3.4\-1.2.3.7;
+\&    SAME to 1.2.3.8\-1.2.3.15 nodst;
+\&    SAME to 1.2.3.16\-1.2.3.31 random;
 .Ve
 .IP "\fB\s-1SECMARK\s0\fR" 8
 .IX Item "SECMARK"
