--- a/doc/ferm.1
+++ b/doc/ferm.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FERM 1"
-.TH FERM 1 "2007-12-19" "ferm 1.3.2" "FIREWALL RULES MADE EASY"
+.TH FERM 1 "2008-01-22" "ferm 1.3.3" "FIREWALL RULES MADE EASY"
 .SH "NAME"
 \&\fBferm\fR \- a firewall rule parser for linux
 .SH "SYNOPSIS"
@@ -1028,6 +1028,9 @@ process id, session id and command name.
 \&    mod owner sid\-owner 6543;
 \&    mod owner cmd\-owner "sendmail";
 .Ve
+.Sp
+(\*(L"cmd\-owner\*(R", \*(L"pid\-owner\*(R" and \*(L"sid\-owner\*(R" require special kernel
+patches not included in the vanilla Linux kernel)
 .IP "\fBphysdev\fR" 8
 .IX Item "physdev"
 Matches the physical device on which a packet entered or is about to
@@ -1196,13 +1199,17 @@ Check the \s-1TCP\s0 \s-1MSS\s0 field of a \s-1SYN\s0 or \s-1SYN/ACK\s0 packet.
 .IX Item "time"
 Check if the time a packet arrives is in given range.
 .Sp
-.Vb 6
+.Vb 10
 \&    mod time timestart 12:00;
 \&    mod time timestop 13:30;
 \&    mod time days (Mon Wed Fri);
 \&    mod time datestart 2005:01:01;
 \&    mod time datestart 2005:01:01:23:59:59;
 \&    mod time datestop 2005:04:01;
+\&    mod time monthday (30 31);
+\&    mod time weekdays (Wed Thu);
+\&    mod time timestart 12:00 utc;
+\&    mod time timestart 12:00 localtz;
 .Ve
 .Sp
 Type \*(L"iptables \-m time \-h\*(R" for details.
@@ -1331,8 +1338,12 @@ i.e. rule traversal continues at the next rule.
 Sets the netfilter mark field for the packet (a 32 bit integer between
 0 and 4294967295):
 .Sp
-.Vb 1
+.Vb 5
 \&    MARK set\-mark 42;
+\&    MARK set\-xmark 7/3;
+\&    MARK and\-mark 31;
+\&    MARK or\-mark 1;
+\&    MARK xor\-mark 12;
 .Ve
 .IP "\fB\s-1MASQUERADE\s0\fR" 8
 .IX Item "MASQUERADE"
@@ -1341,9 +1352,10 @@ port-range for iptables. Specify as \*(L"123\*(R", \*(L"123\-456\*(R" or \*(L"12
 The port range parameter specifies what local ports masqueraded
 connections should originate from.
 .Sp
-.Vb 2
+.Vb 3
 \&    MASQUERADE;
 \&    MASQUERADE to\-ports 1234:2345;
+\&    MASQUERADE to\-ports 1234:2345 random;
 .Ve
 .IP "\fB\s-1MIRROR\s0\fR" 8
 .IX Item "MIRROR"
@@ -1396,8 +1408,9 @@ queue 0.
 Transparent proxying: alter the destination \s-1IP\s0 of the packet to the
 machine itself.
 .Sp
-.Vb 1
+.Vb 2
 \&    proto tcp dport http REDIRECT to\-ports 3128;
+\&    proto tcp dport http REDIRECT to\-ports 3128 random;
 .Ve
 .IP "\fB\s-1SAME\s0\fR" 8
 .IX Item "SAME"
@@ -1429,9 +1442,10 @@ Add the \s-1IP\s0 to the specified set. See <http://ipset.netfilter.org/>
 .IX Item "SNAT to [ip-address|ip-range|ip-port-range]"
 Change the source address of the packet.
 .Sp
-.Vb 2
+.Vb 3
 \&    SNAT to 1.2.3.4;
 \&    SNAT to 1.2.3.4:20000\-30000;
+\&    SNAT to 1.2.3.4 random;
 .Ve
 .IP "\fB\s-1TCPMSS\s0\fR" 8
 .IX Item "TCPMSS"
@@ -1448,8 +1462,11 @@ used by whatever traffic scheduler is willing to, mostly your own
 linux\-machine, but maybe more. The original tos-bits are blanked and
 overwritten by this value.
 .Sp
-.Vb 1
+.Vb 4
 \&    TOS set\-tos Maximize\-Throughput;
+\&    TOS and\-tos 7;
+\&    TOS or\-tos 1;
+\&    TOS xor\-tos 4;
 .Ve
 .Sp
 Type \*(L"iptables \-j \s-1TOS\s0 \-h\*(R" for details.
