--- a/doc/ferm.1
+++ b/doc/ferm.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FERM 1"
-.TH FERM 1 "2008-01-22" "ferm 1.3.3" "FIREWALL RULES MADE EASY"
+.TH FERM 1 "2008-05-28" "ferm 1.3.4" "FIREWALL RULES MADE EASY"
 .SH "NAME"
 \&\fBferm\fR \- a firewall rule parser for linux
 .SH "SYNOPSIS"
@@ -212,7 +212,7 @@ Try using comments to show what you are doing:
 .Vb 3
 \&    # this line enables transparent http\-proxying for the internal network:
 \&    proto tcp if eth0 daddr ! 192.168.0.0/255.255.255.0
-\&        dport http REDIRECT 3128;
+\&        dport http REDIRECT to\-ports 3128;
 .Ve
 .PP
 You will be thankful for it later!
@@ -1884,7 +1884,7 @@ Bugs? What bugs?
 If you find a bug, please tell us: ferm@foo\-projects.org
 .SH "COPYRIGHT"
 .IX Header "COPYRIGHT"
-Copyright (C) 2001\-2007 Auke Kok <sofar@foo\-projects.org>, Max
+Copyright (C) 2001\-2008 Auke Kok <sofar@foo\-projects.org>, Max
 Kellermann <max@foo\-projects.org>
 .PP
 This program is free software; you can redistribute it and/or modify
