--- a/doc/ferm.pod
+++ b/doc/ferm.pod
@@ -5,7 +5,7 @@
 #
 # ferm, a firewall setup program that makes firewall rules easy!
 #
-# Copyright (C) 2001-2007  Auke Kok, Max Kellermann
+# Copyright (C) 2001-2008  Auke Kok, Max Kellermann
 #
 # Comments, questions, greetings and additions to this program
 # may be sent to <ferm@foo-projects.org>
@@ -107,7 +107,7 @@ Try using comments to show what you are doing:
 
     # this line enables transparent http-proxying for the internal network:
     proto tcp if eth0 daddr ! 192.168.0.0/255.255.255.0
-        dport http REDIRECT 3128;
+        dport http REDIRECT to-ports 3128;
 
 You will be thankful for it later!
 
@@ -1725,7 +1725,7 @@ If you find a bug, please tell us: ferm@foo-projects.org
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2007 Auke Kok <sofar@foo-projects.org>, Max
+Copyright (C) 2001-2008 Auke Kok <sofar@foo-projects.org>, Max
 Kellermann <max@foo-projects.org>
 
 This program is free software; you can redistribute it and/or modify
