--- a/doc/import-ferm.1
+++ b/doc/import-ferm.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "IMPORT-FERM 1"
-.TH IMPORT-FERM 1 "2008-07-24" "ferm 2.0.2" "FIREWALL RULES MADE EASY"
+.TH IMPORT-FERM 1 "2008-09-30" "ferm 2.0.3~svn20080930" "FIREWALL RULES MADE EASY"
 .SH "NAME"
 import\-ferm \- import existing firewall rules into ferm
 .SH "SYNOPSIS"
